# slack-ai-council

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  context_filter.py  llm_manager.py  mode_manager.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
tests/: __init__.py  test_context_filter.py  test_followup_modal.py  test_llm_manager.py  test_metadata.py  test_mode_manager.py
