[project]
name = "slack-ai-council"
version = "0.1.0"
description = "A Slack bot that integrates multiple AI models to provide multi-perspective responses"
requires-python = ">=3.10"
dependencies = [
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.23.0",
    "openai>=1.3.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
